--- a/bb/sass/blocks/platform.scss
+++ b/bb/sass/blocks/platform.scss
@@ -1,8 +1,17 @@
-.platfrom {
+.platform {
+  padding: 100px 0;
+  text-align: center;
   
   h1 {
+    margin-top: 0;
+    margin-bottom: 40px;
     font-size: 46px;
     font-family: 'Proxima Nova Rg', sans-serif;
-    text-align: center;
+  }
+  
+  p {
+    margin-bottom: 50px;
+    font-size: 30px;
+    font-family: 'Proxima Nova Lt', sans-serif;
   }
 }
