--- a/bb/sass/blocks/btn.scss
+++ b/bb/sass/blocks/btn.scss
@@ -46,3 +46,14 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .btn {
+    
+    &--unclick {
+      padding: 14px 41px;
+    }
+  }
+}
