--- a/bb/sass/global/base.scss
+++ b/bb/sass/global/base.scss
@@ -7,3 +7,12 @@ body {
   width: 1170px;
   margin: 0 auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+    // background: red;
+  }
+}
+
+@media screen and ($mobile-widths) {}
