--- a/bb/sass/blocks/header.scss
+++ b/bb/sass/blocks/header.scss
@@ -6,5 +6,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   padding: 30px 0;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .header__flex {
+    justify-content: center;
+  }
 }
