--- a/bb/sass/blocks/nav.scss
+++ b/bb/sass/blocks/nav.scss
@@ -19,3 +19,22 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .nav {
+    width: 250px;
+    margin-top: 30px;
+    
+    ul {
+      display: flex;
+      justify-content: space-between;
+      
+      a {
+        color: #000;
+        font-size: 20px;
+      }
+    }
+  }
+}
