--- a/bb/sass/blocks/products.scss
+++ b/bb/sass/blocks/products.scss
@@ -66,3 +66,30 @@
     background-size: 100px;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .products {
+    padding-top: 50px;
+    
+    h1 {
+      margin-bottom: 50px;
+      font-size: 30px;
+    }
+    
+    hr {
+      width: 80%;
+    }
+  }
+  
+  .products__flex {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0;
+  }
+  
+  .products__box {
+    margin-bottom: 50px;
+  }
+}
