--- a/bb/sass/blocks/title.scss
+++ b/bb/sass/blocks/title.scss
@@ -28,3 +28,28 @@
     margin: 0 15px;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .title {
+    padding: 200px 0;
+    
+    h1 {
+      font-size: 40px;
+    }
+    
+    b {
+      font-size: 25px;
+    }
+  }
+  
+  .title__links {
+    flex-direction: column;
+    align-items: center;
+    
+    a {
+      margin: 10px 0;
+    }
+  }
+}
