--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -680,8 +680,14 @@ body {
       text-align: center; }
   .manual__button {
     width: auto; }
+  .manual__links:focus {
+    display: none; }
   .manual__content {
-    width: auto; } }
+    width: auto;
+    padding: 20px 40px; }
+    .manual__content--trade a {
+      width: auto;
+      padding: 15px; } }
 
 .support h1 {
   margin-top: 110px;
@@ -702,6 +708,11 @@ body {
   margin-top: 50px;
   margin-bottom: 100px;
   text-align: center; }
+
+@media screen and (max-width: 768px) {
+  .support h1 {
+    margin-top: 50px;
+    font-size: 30px; } }
 
 .edge {
   width: 100%;
@@ -872,6 +883,10 @@ body {
   .edge__box--6 {
     display: none; } }
 
+@media screen and (max-width: 768px) {
+  .edge {
+    display: none; } }
+
 .platform {
   padding: 100px 0;
   text-align: center; }
@@ -886,6 +901,15 @@ body {
     font-family: 'Proxima Nova Lt', sans-serif; }
   .platform img {
     max-width: 100%; }
+
+@media screen and (max-width: 768px) {
+  .platform {
+    padding: 0 0 50px 0; }
+    .platform h1 {
+      margin-bottom: 20px;
+      font-size: 30px; }
+    .platform p {
+      font-size: 25px; } }
 
 .footer {
   padding: 70px 0;
@@ -969,3 +993,12 @@ body {
     margin-top: 30px; }
   .footer__right {
     margin-top: 30px; } }
+
+@media screen and (max-width: 768px) {
+  .footer__flex {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .footer__middle {
+    width: auto;
+    text-align: center; } }
