--- a/bb/sass/blocks/platform.scss
+++ b/bb/sass/blocks/platform.scss
@@ -20,8 +20,19 @@
   }
 }
 
-@media screen and ($tablet-widths) {
-  
-}
+@media screen and ($tablet-widths) {}
 
-@media screen and ($mobile-widths) {}
+@media screen and ($mobile-widths) {
+  .platform {
+    padding: 0 0 50px 0;
+    
+    h1 {
+      margin-bottom: 20px;
+      font-size: 30px;
+    }
+    
+    p {
+      font-size: 25px;
+    }
+  }
+}
