--- a/bb/sass/blocks/manual.scss
+++ b/bb/sass/blocks/manual.scss
@@ -10,37 +10,9 @@
 }
 
 .manual__tabs {
-  // float: left;
   display: flex;
   justify-content: space-between;
-  // border: 1px solid #ccc;
-  // background-color: #f1f1f1;
   width: 100%;
-  // height: 600px;
-  
-  button {
-    // display: block;
-    width: 100%;
-    padding: 50px;
-    padding-right: 80px;
-    color: #000;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Proxima Nova Rg', sans-serif;
-    text-align: right;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
-    
-    &:hover {
-      // background-color: #ddd;
-    }
-    
-    &:active {
-      // background-color: #ccc;
-    }
-  }
 }
 
 .manual__button {
@@ -50,134 +22,148 @@
   width: 40%;
 }
 
-.manual__links--trade {
-  position: relative;
-  background: #68788a;
+.manual__links {
+  width: 100%;
+  padding: 50px;
+  padding-right: 80px;
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Proxima Nova Rg', sans-serif;
+  text-align: right;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
   
-  &:focus {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: -30px;
-      width: 34px;
-      height: 124px;
-      background: url('../img/btn-arrow-trade.png') no-repeat top;
-      background-size: contain;
-    }
+  &--trade {
+    background: #68788a;
     
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50px;
-      right: 140px;
-      width: 30px;
-      height: 22px;
-      background: url('../img/pointer.svg') no-repeat top;
-      background-size: contain;
+    &.active {     
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -31px;
+        width: 34px;
+        height: 128px;
+        background: url('../img/btn-arrow-trade.png') no-repeat top;
+        background-size: contain;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 52px;
+        right: 150px;
+        width: 30px;
+        height: 22px;
+        background: url('../img/pointer.svg') no-repeat top;
+        background-size: contain;
+      }
+    }
+  }
+  
+  &--manage {
+    background: #f58b23;
+    
+    &.active {     
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -31px;
+        width: 34px;
+        height: 128px;
+        background: url('../img/btn-arrow-manage.png') no-repeat top;
+        background-size: contain;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 52px;
+        right: 175px;
+        width: 30px;
+        height: 22px;
+        background: url('../img/pointer.svg') no-repeat top;
+        background-size: contain;
+      }
+    }
+  }
+  
+  &--integrate {
+    background: #0bbcfd;
+    
+    &.active {     
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -31px;
+        width: 34px;
+        height: 128px;
+        background: url('../img/btn-arrow-integrate.png') no-repeat top;
+        background-size: contain;
+        opacity: 1;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 52px;
+        right: 185px;
+        width: 30px;
+        height: 22px;
+        background: url('../img/pointer.svg') no-repeat top;
+        background-size: contain;
+      }
+    }
+  }
+  
+  &--grow {
+    background: #d4c2a5;
+    
+    &.active {     
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -31px;
+        width: 34px;
+        height: 128px;
+        background: url('../img/btn-arrow-grow.png') no-repeat top;
+        background-size: contain;
+        opacity: 1;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 52px;
+        right: 145px;
+        width: 30px;
+        height: 22px;
+        background: url('../img/pointer.svg') no-repeat top;
+        background-size: contain;
+      }
     }
   }
 }
 
-.manual__links--manage {
+.active {
   position: relative;
-  background: #f58b23;
-  
-  &:focus {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: -29px;
-      width: 34px;
-      height: 124px;
-      background: url('../img/btn-arrow-manage.png') no-repeat top;
-      background-size: contain;
-    }
-    
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50px;
-      right: 165px;
-      width: 30px;
-      height: 22px;
-      background: url('../img/pointer.svg') no-repeat top;
-      background-size: contain;
-    }
-  }
+  font-size: 23px;
 }
 
-.manual__links--integrate {
-  position: relative;
-  background: #0bbcfd;
-  
-  &:focus {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: -28px;
-      width: 34px;
-      height: 124px;
-      background: url('../img/btn-arrow-integrate.png') no-repeat top;
-      background-size: contain;
-    }
-    
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50px;
-      right: 175px;
-      width: 30px;
-      height: 22px;
-      background: url('../img/pointer.svg') no-repeat top;
-      background-size: contain;
-    }
-  }
-}
-
-.manual__links--grow {
-  position: relative;
-  background: #d4c2a5;
-  
-  &:focus {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: -28px;
-      width: 34px;
-      height: 124px;
-      background: url('../img/btn-arrow-grow.png') no-repeat top;
-      background-size: contain;
-    }
-    
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50px;
-      right: 140px;
-      width: 30px;
-      height: 22px;
-      background: url('../img/pointer.svg') no-repeat top;
-      background-size: contain;
-    }
-  }
-}
-
-/* Style the tab content */
 .manual__content {
-  // float: left;
   display: none;
   padding: 40px 130px;
-  // border: 1px solid #ccc;
   width: 60%;
   font-size: 16px;
   font-family: 'Proxima Nova Lt', sans-serif;
   border-left: none;
-  // height: 400px;
-  // opacity: 0;
+  background: #e6e6e6;
   transition: 0.6s;
   
   b {
@@ -190,15 +176,14 @@
   
   &--trade {
     display: block;
-    background: #e6e6e6;
-    
-    a {
-      display: block;
-      width: 100px;
-      margin: auto;
-      margin-top: 40px;
-      text-align: center;
-    }
+  }
+  
+  a {
+    display: block;
+    width: 100px;
+    margin: auto;
+    margin-top: 40px;
+    text-align: center;
   }
 }
 
@@ -227,23 +212,20 @@
     width: auto;
   }
   
-  .manual__links {
-    
-    &:focus {
-      display: none;
-    }
-  }
-  
   .manual__content {
     width: auto;
     padding: 20px 40px; 
     
-    &--trade {
-      
-      a {
-        width: auto;
-        padding: 15px;
-      }
+    a {
+      width: auto;
+      padding: 20px;
+    }
+  }
+  
+  .active {
+    &::before,
+    &::after {
+      display: none;
     }
   }
 }
