--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -17,10 +17,10 @@
     background: transparent;
   }
 
-  &--black {
+  &--blue {
     color: #fff;
-    border: 2px solid #000;
-    background: #000;
+    border: 2px solid #1b85c7;
+    background: #1b85c7;
   }
 
   &--title {
